# controllers/menu.go
@@ -9,6 +9,13 @@ type Menu struct {
 	Service services.Menu
 }
 
+// @Description Get all menu
+// @Summary Get all menu
+// @Tags Menu
+// @Accept json
+// @Produce json
+// @Success 200 {object} []models.Menu
+// @Router /menus [get]
 func (c Menu) GetAll(ctx *fiber.Ctx) error {
 	menus, err := c.Service.GetAll()
 	if err != nil {
